--- a/resources/index.html
+++ b/resources/index.html
@@ -6,7 +6,7 @@
 	<meta name="robots" content="noindex,nofollow" />
 	<meta name="googlebot" content="noindex,nofollow" />
 	<link rel="icon" type="image/x-icon" href="/bahmni/favicon.ico">
-	<title>Bahmni</title>
+	<title>liferythem</title>
 	<style>
 		html {
 			overflow: auto;
@@ -315,10 +315,10 @@
 <body onload="init()">
 	<div class="clint-logo-wrapper">
 		<img class="client_logo" src="/bahmni/images/bahmniLogoFull.png" />
-		<span class="title_text"> TITLE TEXT </span>
+		<span class="title_text">Liferythem </span>
 	</div>
 	<div class="header_text">
-		<b>WELCOME TO<br />BAHMNI EMR & HOSPITAL SERVICE</b>
+		<b>WELCOME TO<br />Liferythem EMR & HOSPITAL SERVICE</b>
 	</div>
 	<div class="container">
 		<h4>GET STARTED</h4>
@@ -334,8 +334,8 @@
 	</div>
 	<div class="power-by">
 		<img src="/bahmni/images/bahmniLogoFull.png" alt="Bahmni" />
-		<a class="helper_url" href="https://bahmni.atlassian.net/wiki/display/BAH/Bahmni+Home">
-			Bahmni Help</a>
+		<a class="helper_url" href="#">
+			liferythem Help</a>
 	</div>
 </body>
 
